--- a/docs/package.json
+++ b/docs/package.json
@@ -7,11 +7,13 @@
     "dev": "vitepress dev src",
     "build": "vitepress build src",
     "preview": "vitepress preview src",
-    "format:js": "prettier . --write"
+    "format:js": "prettier . --write",
+    "lint:md": "markdownlint-cli2 ./src/**/*.md --fix"
   },
   "author": "h-banii",
   "license": "MIT",
   "devDependencies": {
+    "markdownlint-cli2": "^0.18.1",
     "prettier": "~3.6.2",
     "vitepress": "~1.6.3",
     "vue": "~3.5.17"
