--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
   "author": "h-banii",
   "license": "MIT",
   "devDependencies": {
-    "markdownlint-cli2": "^0.18.1",
+    "markdownlint-cli2": "~0.18.1",
     "prettier": "~3.6.2",
     "vitepress": "~1.6.3",
     "vue": "~3.5.17"
