--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,8 @@
     "build": "vitepress build",
     "preview": "vitepress preview",
     "format:js": "prettier . --write",
-    "lint:md": "markdownlint-cli2 ./src/**/*.md --fix"
+    "lint:md": "markdownlint-cli2 ./src/**/*.md --fix",
+    "fmt": "npm run format:js && npm run lint:md"
   },
   "author": "h-banii",
   "license": "MIT",
