--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Github Pages
+name: Deploy GitHub Pages
 
 on:
   push:
@@ -13,7 +13,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: true
 
 jobs:
@@ -27,10 +27,9 @@ jobs:
         with:
           sparse-checkout: |
             docs
-      - name: Run build
+      - name: Nix build
         run: nix build .#docs
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3.0.1
+      - uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: ./result
 
