workflows/gh-pages: Only run if branch stable changes

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -2,9 +2,10 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [master]
+    branches: [stable]
     paths:
-      - 'flake.lock'
+      - 'docs/**'
+      - 'modules/**'
   workflow_dispatch:
 
 permissions:
