--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "markdownlint-cli2": "~0.18.1",
     "prettier": "~3.6.2",
     "vitepress": "~1.6.3",
-    "vue": "~3.5.17"
+    "vue": "~3.5.17",
+    "vue-nix-manual": "github:h-banii/vue-nix-manual"
   }
 }
