workflows/gh-pages: Cache the nix store

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,7 @@ on:
   workflow_dispatch:
 
 permissions:
+  actions: write # purge cache
   contents: read
   pages: write
   id-token: write
@@ -21,13 +22,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: cachix/install-nix-action@v31.4.1
-        with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/checkout@v4.2.2
+
+      - name: Nix install
+        uses: nixbuild/nix-quick-install-action@v33
+        with:
+          nix_conf: |
+            keep-env-derivations = true
+            keep-outputs = true
+
+      - name: Nix store cache
+        uses: nix-community/cache-nix-action@v6
+        with:
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('docs/package-lock.json', 'docs/flake.lock') }}
+          restore-prefixes-first-match: nix-${{ runner.os }}-
+          gc-max-store-size-linux: 1G
+          purge: true
+          purge-prefixes: nix-${{ runner.os }}-
+          purge-created: 0
+          purge-last-accessed: 0
+          purge-primary-key: never
+
       - name: Nix build
         working-directory: ./docs
         run: nix build
+
       - uses: actions/upload-pages-artifact@v3.0.1
         with:
           path: ./docs/result
